--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     
-  <title> My Portfolio </title>  <link rel="stylesheet" href="style.css"> <link rel="stylesheet" href="https://fonts.googleapis.com">
+  <title> My Portfolio </title>  <link rel="stylesheet" href="Style.css"> <link rel="stylesheet" href="https://fonts.googleapis.com">
     
   </head>
   <body>
